// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`All AIML examples for docs Ensure JustPrompt is parsed correctly 1`] = `
[
  {
    "astSourceType": "element",
    "attributes": {
      "id": "workflow-root",
      "initial": "root-state-0",
    },
    "children": [
      {
        "astSourceType": "element",
        "attributes": {
          "id": "final",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-0",
            },
            "children": [],
            "columnEnd": 1,
            "columnStart": 1,
            "key": "aiml-56",
            "lineEnd": 1,
            "lineStart": 1,
            "parentId": "final",
            "scope": [
              "root",
              "final",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-52",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "final",
        ],
        "subType": "output",
        "tag": "final",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-0",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": 
"This is a basic prompt, its just text!

It can even include tags that are not special, and it works just fine!

<someOtherTag>
 text inside
</someOtherTag>"
,
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 16,
            "columnStart": 1,
            "key": "aiml-53",
            "lineEnd": 7,
            "lineStart": 1,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "final",
            },
            "children": [
              {
                "astSourceType": "element",
                "attributes": {
                  "target": "final",
                },
                "children": [],
                "columnEnd": 16,
                "columnStart": 1,
                "key": "aiml-58",
                "lineEnd": 7,
                "lineStart": 1,
                "parentId": undefined,
                "scope": [
                  "root",
                  "root-state-0",
                ],
                "subType": "action",
                "tag": "transition",
                "type": "state",
              },
            ],
            "columnEnd": 16,
            "columnStart": 1,
            "key": "aiml-57",
            "lineEnd": 7,
            "lineStart": 1,
            "parentId": "root-state-0",
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "state",
          },
        ],
        "columnEnd": 16,
        "columnStart": 1,
        "key": "aiml-54",
        "lineEnd": 7,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-0",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "error",
        },
        "children": [],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-55",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": "workflow-root",
        "scope": [
          "root",
          "error",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
    ],
    "columnEnd": 1,
    "columnStart": 1,
    "key": "aiml-51",
    "lineEnd": 1,
    "lineStart": 1,
    "scope": [
      "root",
    ],
    "subType": "human-input",
    "tag": "workflow",
    "type": "state",
  },
]
`;

exports[`All AIML examples for docs Ensure SimpleChain is parsed correctly 1`] = `
[
  {
    "astSourceType": "element",
    "attributes": {
      "id": "workflow-root",
      "initial": "root-state-0",
      "model": "account/fireworks/model/deepseek-v3",
    },
    "children": [
      {
        "astSourceType": "element",
        "attributes": {
          "id": "final",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-0",
            },
            "children": [],
            "columnEnd": 1,
            "columnStart": 1,
            "key": "aiml-73",
            "lineEnd": 1,
            "lineStart": 1,
            "parentId": "final",
            "scope": [
              "root",
              "final",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-69",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "final",
        ],
        "subType": "output",
        "tag": "final",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-0",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": 
"You are a helpful assistant that can answer questions and help with tasks.
The user has made a request of you, just think outloud to yourself about how to respond.
Wrap your thoughts in"
,
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 234,
            "columnStart": 49,
            "key": "aiml-70",
            "lineEnd": 3,
            "lineStart": 3,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "final",
            },
            "children": [
              {
                "astSourceType": "element",
                "attributes": {
                  "target": "final",
                },
                "children": [],
                "columnEnd": 234,
                "columnStart": 49,
                "key": "aiml-75",
                "lineEnd": 3,
                "lineStart": 3,
                "parentId": undefined,
                "scope": [
                  "root",
                  "root-state-0",
                ],
                "subType": "action",
                "tag": "transition",
                "type": "state",
              },
            ],
            "columnEnd": 234,
            "columnStart": 49,
            "key": "aiml-74",
            "lineEnd": 3,
            "lineStart": 3,
            "parentId": "root-state-0",
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "state",
          },
        ],
        "columnEnd": 234,
        "columnStart": 49,
        "key": "aiml-71",
        "lineEnd": 3,
        "lineStart": 3,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-0",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "model": "account/fireworks/model/qwen-2.5-32b",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {},
            "children": [
              {
                "astSourceType": "expression",
                "columnEnd": 665,
                "columnStart": 577,
                "key": "aiml-62",
                "lineEnd": 1,
                "lineStart": 1,
                "scope": [
                  "root",
                ],
                "value": "{({lastElement}) => \`Your thoughts on the conversation so far... \${lastElement.output}\`}",
              },
              {
                "astSourceType": "text",
                "columnEnd": 727,
                "columnStart": 674,
                "key": "aiml-63",
                "lineEnd": 1,
                "lineStart": 1,
                "scope": [
                  "root",
                ],
                "value": "Based on your thoughts, respond to the users request.",
              },
            ],
            "columnEnd": 573,
            "columnStart": 380,
            "key": "aiml-64",
            "lineEnd": 4,
            "lineStart": 4,
            "scope": [
              "root",
            ],
            "subType": undefined,
            "tag": "instructions",
            "type": "param",
          },
          {
            "astSourceType": "element",
            "attributes": {},
            "children": [
              {
                "astSourceType": "expression",
                "columnEnd": 805,
                "columnStart": 769,
                "key": "aiml-65",
                "lineEnd": 1,
                "lineStart": 1,
                "scope": [
                  "root",
                ],
                "value": "{({userInput}) => userInput.message}",
              },
            ],
            "columnEnd": 765,
            "columnStart": 698,
            "key": "aiml-66",
            "lineEnd": 3,
            "lineStart": 3,
            "scope": [
              "root",
            ],
            "subType": undefined,
            "tag": "prompt",
            "type": "param",
          },
        ],
        "columnEnd": 505,
        "columnStart": 178,
        "key": "aiml-67",
        "lineEnd": 9,
        "lineStart": 9,
        "parentId": undefined,
        "scope": [
          "root",
        ],
        "subType": "model",
        "tag": "llm",
        "type": "action",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "error",
        },
        "children": [],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-72",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": "workflow-root",
        "scope": [
          "root",
          "error",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
    ],
    "columnEnd": 1,
    "columnStart": 1,
    "key": "aiml-68",
    "lineEnd": 1,
    "lineStart": 1,
    "scope": [
      "root",
    ],
    "subType": "human-input",
    "tag": "workflow",
    "type": "state",
  },
]
`;
